--- a/lib/map-component/css/index.css
+++ b/lib/map-component/css/index.css
@@ -35,3 +35,22 @@ body {
   position: relative;
   overflow: hidden;
 }
+
+
+path {
+  fill: none;
+  stroke: #000;
+  stroke-linejoin: round;
+  stroke-linecap: round;
+}
+
+.major_road { stroke: #776; }
+.minor_road { stroke: #ccb; }
+.highway { stroke: #f39; stroke-width: 1.5px; }
+.rail { stroke: #7de; }
+.buildings path { stroke: none; fill: black; }
+
+.overlay {
+  fill: none;
+  pointer-events: all;
+}
