letter in out working
using re-com...well, loading it anyway.  no widgets are yet harmed.

the letter thing works. a little wierdness in thepositions of the
letters

now to make a map widget

--- a/resources/html/css/base.css
+++ b/resources/html/css/base.css
@@ -18,3 +18,14 @@ div.container div.row {
     max-width:551px;
     min-width:400px;
 }
+
+
+.enter {
+    font: bold 20px monospace;
+    fill: green;
+}
+
+.update {
+    font: bold 20px monospace;
+    fill: red;
+}
