can click and unclick grid cells
click on a cell, it is classed active

click again, "active" class is removed

--- a/resources/html/css/base.css
+++ b/resources/html/css/base.css
@@ -39,3 +39,10 @@ div.container div.row {
 .grid:hover {
   fill: orange;
 }
+
+.grid.active {
+    fill: #449;
+}
+.grid.active:hover {
+    fill: #e4f;
+}
