make grid cells nested
columns of i, then j.

for each column, a <g>element, then followed by a list of path elements.

should speed up searching for the color by vmt step

--- a/resources/html/css/base.css
+++ b/resources/html/css/base.css
@@ -46,3 +46,10 @@ div.container div.row {
 .grid.active:hover {
     fill: #e4f;
 }
+
+.grid.red-cell {
+    fill: red;
+}
+.grid.green-cell {
+    fill:green;
+}
