okay, getting somewhere
can color based on hpms query

however, the ordering is completely broken, looks like random scatter of
green on the map, which means the sorting isn't matching up with
existing data.  Need to review the enter exit letter code again to make
sure.

--- a/resources/html/css/base.css
+++ b/resources/html/css/base.css
@@ -47,9 +47,9 @@ div.container div.row {
     fill: #e4f;
 }
 
-.grid.red-cell {
+.grid.redvmt {
     fill: red;
 }
-.grid.green-cell {
+.grid.greenvmt {
     fill:green;
 }
