working reasonably well
gray out button when disabled

disabled is working properly

make topojson an fx handler, not a db handler; dispatch loading, not
loading type events.  Can probably refactor to make it much
cleaner...right now it is way too big

Also moved colorit into events handler, out of view.  color is now
stored in the data object, rather than computing from hpms data entries
at the view.

also created a db element colorkey to know which hpms element to use for
coloring.  Can use that to change the variable selected.

(which of course means I'll need to refactor the above to split out
coloring loop and data ingestion loop, so that I can switch coloring
from one variable to another)

Anyway, commit and move on to getting the real hourly data

--- a/resources/html/css/base.css
+++ b/resources/html/css/base.css
@@ -56,3 +56,8 @@ div.container div.row {
 .grid.active:hover {
     fill: #e4f;
 }
+
+button:disabled {
+    background-color:#999;
+    text-color:#444;
+}
